# cmake-arm-demo

./: CMakeLists.txt  readme.md
toolchains/: arm.cmake
